@@ -8,6 +8,7 @@ launchpad-buildd (216) UNRELEASED; urgency=medium
   * Add a timeout when revoking proxy tokens.
   * Log SHA-512 hash of built snaps (LP: #1979844).
   * Revise ordering of deployment documentation.
+  * Gather *.debug from snap builds.
 
   [ Jürgen Gmach ]
   * Pass secrets to the CI runner.
